Fri Aug 17 11:24:28 EDT 2007	Dave Foster <daf@minuslab.net>
	* Added better process cleanup support.
	* Preparing for handlers to implement a delay return code.

Mon Dec 18 21:15:07 EST 2006	Dave Foster <daf@minuslab.net>
	* Implemented logging.
	* Implemented forking for handlers.

Tue Oct 31 20:33:54 EST 2006	Dave Foster <daf@minuslab.net>
	* Starting using changelog.
	* Inserted signal handlers for quit signals.
	* Moved config to be a global var.